--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditProject.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditProject.cshtml
@@ -132,9 +132,9 @@
                                             Client & Part Information
                                         </a>
                                     </h4>
-                                    <button type="button" class="btn btn-xs btn-info edit-btn"
+                                    <button type="button" class="btn btn-xs btn-success edit-btn"
                                             onclick="location.href='@Url.Action("EditClientPartInformation", "CTZ_Projects", new { id = Model.ID_Project })'">
-                                        Edit
+                                        <i class="fa-solid fa-pen-to-square"></i> Edit
                                     </button>
                                 </div>
                                 <div id="collapseOne" class="panel-collapse collapse @(expandedSection == "collapseOne" ? "show" : "")">
