--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
@@ -5,6 +5,11 @@
     ViewBag.SegundoNivel = "ctz_catalogs";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
     ViewBag.nav_style = "nav-sm";
+
+
+    bool canViewManagePermissions = ViewBag.CanViewManagePermissions as bool? ?? false;
+    bool canEditManagePermissions = ViewBag.CanEditManagePermissions as bool? ?? false;
+
 }
 
 @section estilos
@@ -64,7 +69,7 @@
                             </p>
                             <a href="@Url.Action("engineering_dimension", ViewBag.ControllerName)" class="btn btn-catalog">
                                 <i class="fa fa-wrench"></i> Engineering Dimension
-                            </a> 
+                            </a>
                             <a href="@Url.Action("strokes_per_minute", ViewBag.ControllerName)" class="btn btn-catalog">
                                 <i class="fa fa-clock"></i> Strokes per Minute
                             </a>
@@ -74,15 +79,44 @@
                         </div>
                         <!-- Sección para el área de Engineering -->
                         <div class="catalog-area">
-                            <h3><i class="fa fa-cogs"></i> Data Management</h3>
+                            <h3><i class="fa fa-layer-group"></i> Data Management</h3>
                             <p>
                                 Manage Data Management-related catalogs, such as Efficiency and Capacity.
                             </p>
                             <a href="@Url.Action("hours_by_line", ViewBag.ControllerName)" class="btn btn-catalog">
                                 <i class="fa fa-clock"></i> Times per Line
-                            </a> 
-                           
+                            </a>
+
                         </div>
+
+                        @if (canViewManagePermissions)
+                        {
+                            <!-- Admin section -->
+                            <div class="catalog-area">
+                                <h3><i class="fa fa-user-shield"></i> Role &amp; Permission Management</h3>
+                                <p>
+                                    Manage user roles and their permissions across application resources.
+                                </p>
+
+                                @{
+                                    // Construimos dinámicamente los atributos del botón
+                                    var btnClass = "btn btn-catalog";
+                                    var href = Url.Action("ManagePermissions", (string)ViewBag.ControllerName);
+                                    var extra = "";
+                                    if (!canEditManagePermissions)
+                                    {
+                                        btnClass += " disabled";
+                                        href = "#";                             // evita navegación
+                                        extra = " tabindex=\"-1\" aria-disabled=\"true\"";
+                                    }
+                                }
+
+                                <a href="@href" class="@btnClass" @Html.Raw(extra)>
+                                    <i class="fa fa-key"></i> Open Permissions Panel
+                                </a>
+                            </div>
+                        }
+
                         <!-- Finaliza Contenido -->
                     </div>
                 </div>
